--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,10 +13,27 @@
 
         <!-- css file -->
         <link rel="stylesheet" href="css/style.css">
-        <title>Document</title>
+        <title>شركة التوامان</title>
     </head>
     <body>
-        
+        <header>
+            <div class="container">
+                <div class="header-content">
+                    <div class="logo"><h2 class="logo-title">التوامان</h2></div>
+                    <ul class="nav">
+                        <li><a href="index.html">الرئيسية</a></li>
+                        <li><a href="#about">من نحن</a></li>
+                        <li><a href="#services">خدماتنا</a></li>
+                        <li><a href="#contact">تواصل معنا</a></li>
+                    </ul>
+                    <div class="menu-icon">
+                        <div class="line1"></div>
+                        <div class="line2"></div>
+                        <div class="line3"></div>
+                    </div>
+                </div>
+            </div>
+        </header>
 
 
 
