--- a/index.html
+++ b/index.html
@@ -34,8 +34,16 @@
                 </div>
             </div>
         </header>
-
-
+<!-- ----------------------------------------------------------------------------------- -->
+   <!-- home -->
+   <div class="home">
+    <div class="home-content">
+        <h2 class="home-title">شركة التوامان</h2>
+        <p class="home-desc">مرحبا بكم في الموقع الرسمي لشركة التوامان لجميع خدمات الاجهزة الاليكترونية</p>
+        <button class="btn btn-outline-primary">اعرف المزيد</button>
+    </div><!-- ./home-content -->
+ </div><!-- ./home -->
+<!-- ------------------------------------------------------------------------------------ -->
 
 
 
