--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
 
 
 
+<!-- --------------------------------------------------------------------------------- -->
+<!-- btn to up-->
+<button class="btn-up"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
+<!-- --------------------------------------------------------------------------- -->
         <!-- bootstrap file js -->
         <script src="js/bootstrap.bundle.min.js"></script>
 
