--- a/index.html
+++ b/index.html
@@ -39,13 +39,26 @@
    <div class="home">
     <div class="home-content">
         <h2 class="home-title">شركة التوامان</h2>
-        <p class="home-desc">مرحبا بكم في الموقع الرسمي لشركة التوامان لجميع خدمات الاجهزة الاليكترونية</p>
-        <button class="btn btn-outline-primary">اعرف المزيد</button>
+        <p class="home-desc">مرحبا بكم في الموقع الرسمي لشركة التوامان لجميع خدمات الاجهزة الالكترونية</p>
+        <a href="#about"><button class="btn btn-outline-primary">اعرف المزيد</button></a>
     </div><!-- ./home-content -->
  </div><!-- ./home -->
 <!-- ------------------------------------------------------------------------------------ -->
-
-
+  <!-- about -->
+  <div class="about" id="about">
+    <div class="container">
+        <div class="section-heading">
+            <h2 class="section-heading-title">من نحن</h2>
+        </div>
+        <div class="about-content">
+            <div class="about-item">
+                <h3 class="about-title text-primary">شركة التوامان:  </h3>
+                <p class="about-desc text-secondary">  احد اعرق الشركات المتخصصة في بيع و استبدال و صيانية الاجهزة الالكترونية لدينا خبرة اكثر من عشر سنوات في هذا المجال</p>
+            </div>
+            <div class="about-item"><img src="./img/about.jpg" alt="" srcset=""></div>
+        </div>
+    </div>
+  </div>
 
 <!-- --------------------------------------------------------------------------------- -->
 <!-- btn to up-->
