--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <!-- css file -->
         <link rel="stylesheet" href="css/style.css">
-        <title>شركة التوامان</title>
+        <title>شركة التؤآمان</title>
     </head>
     <body>
         <header>
@@ -23,7 +23,7 @@
                     <ul class="nav">
                         <li><a href="index.html">الرئيسية</a></li>
                         <li><a href="#about">من نحن</a></li>
-                        <li><a href="#services">خدماتنا</a></li>
+                        <li><a href="#services">ماذا نقدم</a></li>
                         <li><a href="#contact">تواصل معنا</a></li>
                     </ul>
                     <div class="menu-icon">
@@ -38,7 +38,7 @@
    <!-- home -->
    <div class="home">
     <div class="home-content">
-        <h2 class="home-title">شركة التوامان</h2>
+        <h2 class="home-title">شركة التؤآمان</h2>
         <p class="home-desc">مرحبا بكم في الموقع الرسمي لشركة التوامان لجميع خدمات الاجهزة الالكترونية</p>
         <a href="#about"><button class="btn btn-outline-primary">اعرف المزيد</button></a>
     </div><!-- ./home-content -->
@@ -52,13 +52,47 @@
         </div>
         <div class="about-content">
             <div class="about-item">
-                <h3 class="about-title text-primary">شركة التوامان:  </h3>
+                <h3 class="about-title text-primary">شركة التؤآمان :  </h3>
                 <p class="about-desc text-secondary">  احد اعرق الشركات المتخصصة في بيع و استبدال و صيانية الاجهزة الالكترونية لدينا خبرة اكثر من عشر سنوات في هذا المجال</p>
+                <a href="#services"><button class="btn btn-outline-primary">منتجاتنا</button></a>
             </div>
             <div class="about-item"><img src="./img/about.jpg" alt="" srcset=""></div>
         </div>
     </div>
   </div>
+<!-- ----------------------------------------------------------------------------------- -->
+  <!-- services -->
+  <div class="services mg-t" id="services" dir="ltr">
+    <div class="container">
+        <div class="section-heading">
+            <h2 class="section-heading-title">ماذا نقدم</h2>
+        </div>
+        <ul class="shuffle" id="filter-btns">
+            <li class="active" data-target="all">All</li>
+            <li data-target="Phone">IPhone</li>
+            <li data-target="Huwaei">Huwaei</li>
+            <li data-target="Oppo">Oppo</li>
+            <li data-target="samsung">Samsung</li>
+          </ul>
+          <!-- <div class="services-content">
+            <div class="services-item" data-id="Phone"><img src="./img/servises/i-phone-1.jpg" alt="" srcset=""></div>
+            <div class="services-item" data-id="Huwaei"><img src="./img/servises/huawei-1.jpg" alt="" srcset=""></div>
+            <div class="services-item" data-id="Oppo"><img src="./img/servises/oppo-1.jpg" alt="" srcset=""></div>
+            <div class="services-item" data-id="Samsung"><img src="./img/servises/samsung-1.jpg" alt="" srcset=""></div>
+            <div class="services-item" data-id="Phone"><img src="./img/servises/i-phone-2.jpg" alt="" srcset=""></div>
+            <div class="services-item" data-id="Huwaei"><img src="./img/servises/huawei-2.jpg" alt="" srcset=""></div>
+            <div class="services-item" data-id="Oppo"><img src="./img/servises/oppo-2.jpg" alt="" srcset=""></div>
+            <div class="services-item" data-id="Samsung"><img src="./img/servises/samsung-2.jpg" alt="" srcset=""></div>
+          </div> -->
+    </div>
+  </div>
+
+
+
+
+
+
+
 
 <!-- --------------------------------------------------------------------------------- -->
 <!-- btn to up-->
