modified services section

--- a/index.html
+++ b/index.html
@@ -71,19 +71,22 @@
             <li class="active" data-target="all">All</li>
             <li data-target="Phone">IPhone</li>
             <li data-target="Huwaei">Huwaei</li>
-            <li data-target="Oppo">Oppo</li>
             <li data-target="samsung">Samsung</li>
+            <li data-target="Oppo">Oppo</li>
           </ul>
-          <!-- <div class="services-content">
-            <div class="services-item" data-id="Phone"><img src="./img/servises/i-phone-1.jpg" alt="" srcset=""></div>
-            <div class="services-item" data-id="Huwaei"><img src="./img/servises/huawei-1.jpg" alt="" srcset=""></div>
-            <div class="services-item" data-id="Oppo"><img src="./img/servises/oppo-1.jpg" alt="" srcset=""></div>
-            <div class="services-item" data-id="Samsung"><img src="./img/servises/samsung-1.jpg" alt="" srcset=""></div>
-            <div class="services-item" data-id="Phone"><img src="./img/servises/i-phone-2.jpg" alt="" srcset=""></div>
-            <div class="services-item" data-id="Huwaei"><img src="./img/servises/huawei-2.jpg" alt="" srcset=""></div>
-            <div class="services-item" data-id="Oppo"><img src="./img/servises/oppo-2.jpg" alt="" srcset=""></div>
-            <div class="services-item" data-id="Samsung"><img src="./img/servises/samsung-2.jpg" alt="" srcset=""></div>
-          </div> -->
+           <div class="services-content">
+            <div class="services-item" data-id="Phone"><img src="./img/services/i-phone-1.jpg" alt="" srcset=""></div>
+            <div class="services-item" data-id="Huwaei"><img src="./img/services/huawei-1.jpg" alt="" srcset=""></div>
+            <div class="services-item" data-id="Oppo"><img src="./img/services/oppo-1.jpg" alt="" srcset=""></div>
+            <div class="services-item" data-id="Samsung"><img src="./img/services/samsung-1.jpg" alt="" srcset=""></div>
+            <div class="services-item" data-id="Phone"><img src="./img/services/i-phone-2.jpg" alt="" srcset=""></div>
+            <div class="services-item" data-id="Huwaei"><img src="./img/services/huawei-2.jpg" alt="" srcset=""></div>
+            <div class="services-item" data-id="Oppo"><img src="./img/services/oppo-2.jpg" alt="" srcset=""></div>            <div class="services-item" data-id="Samsung"><img src="./img/services/samsung-2.jpg" alt="" srcset=""></div>
+            <div class="services-item" data-id="Phone"><img src="./img/services/i-phone-3.jpg" alt="" srcset=""></div>
+            <div class="services-item" data-id="Huwaei"><img src="./img/services/huawei-3.jpg" alt="" srcset=""></div>
+            <div class="services-item" data-id="Oppo"><img src="./img/services/oppo-3.jpg" alt="" srcset=""></div>
+            <div class="services-item" data-id="Samsung"><img src="./img/services/samsung-3.jpg" alt="" srcset=""></div>
+          </div> 
     </div>
   </div>
 
