End of the services section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <li class="active" data-target="all">All</li>
             <li data-target="Phone">IPhone</li>
             <li data-target="Huwaei">Huwaei</li>
-            <li data-target="samsung">Samsung</li>
+            <li data-target="Samsung">Samsung</li>
             <li data-target="Oppo">Oppo</li>
           </ul>
            <div class="services-content">
