modified nav section

--- a/index.html
+++ b/index.html
@@ -16,24 +16,32 @@
         <title>شركة التؤآمان</title>
     </head>
     <body>
-        <header>
-            <div class="container">
-                <div class="header-content">
-                    <div class="logo"><h2 class="logo-title">التوامان</h2></div>
-                    <ul class="nav">
-                        <li><a href="index.html">الرئيسية</a></li>
-                        <li><a href="#about">من نحن</a></li>
-                        <li><a href="#services">ماذا نقدم</a></li>
-                        <li><a href="#contact">تواصل معنا</a></li>
-                    </ul>
-                    <div class="menu-icon">
-                        <div class="line1"></div>
-                        <div class="line2"></div>
-                        <div class="line3"></div>
-                    </div>
-                </div>
-            </div>
-        </header>
+<!-- ------------------------------------------------------------------------ -->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light p-3">
+        <div class="container">
+          <a class="navbar-brand fs-1 fw-bold" href="#">التؤآمان</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link fw-bold active fs-5" aria-current="page" href="#">الرئيسية</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-bold fs-5" href="#">من نحن</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-bold fs-5" href="#" tabindex="-1" aria-disabled="true">ماذا نقدم</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-bold fs-5" href="#" tabindex="-1" aria-disabled="true">تواصل معنا</a>
+              </li>
+            </ul>
+
+          </div>
+        </div>
+      </nav>
 <!-- ----------------------------------------------------------------------------------- -->
    <!-- home -->
    <div class="home">
