--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 <!-- ----------------------------------------------------------------------------------- -->
    <!-- home -->
    <div class="home">
-    <div class="home-content">
-        <h2 class="home-title">شركة التؤآمان</h2>
-        <p class="home-desc">مرحبا بكم في الموقع الرسمي لشركة التوامان لجميع خدمات الاجهزة الالكترونية</p>
+    <div class="home-content text-center position-absolute">
+        <h2 class="home-title text-light mb-4">شركة التؤآمان</h2>
+        <p class="home-desc mb-4 fs-3">مرحبا بكم في الموقع الرسمي لشركة التوامان لجميع خدمات الاجهزة الالكترونية</p>
         <a href="#about"><button class="btn btn-outline-primary">اعرف المزيد</button></a>
     </div><!-- ./home-content -->
  </div><!-- ./home -->
