modified about section

--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
             <h2 class="section-heading-title">من نحن</h2>
             <p class="section-heading-desc">اليكم في هذاالقسم تعريف بسيط و مختصر بشركة التؤآمان</p>
         </div>
-        <div class="about-content">
-            <div class="about-item">
-                <h3 class="about-title text-primary">شركة التؤآمان :  </h3>
-                <p class="about-desc text-secondary">  احد اعرق الشركات المتخصصة في بيع و استبدال و صيانية الاجهزة الالكترونية لدينا خبرة اكثر من عشر سنوات في هذا المجال</p>
-                <a href="#services"><button class="btn btn-outline-primary">منتجاتنا</button></a>
-            </div>
-            <div class="about-item"><img src="./img/about.jpg" alt="" srcset=""></div>
+        <div class="row text-center text-md-end">
+          <div class="about-item col-md-6 mb-2">
+            <h2 class="about-title text-primary mb-3">شركة التؤآمان :  </h2>
+            <p class="about-desc text-secondary fs-3">  احد اعرق الشركات المتخصصة في بيع و استبدال و صيانية الاجهزة الالكترونية لدينا خبرة اكثر من عشر سنوات في هذا المجال</p>
+            <a href="#services"><button class="btn btn-outline-primary">منتجاتنا</button></a>
+          </div>
+          <div class="about-item col-md-6"><img class="img-fluid" src="./img/about.jpg" alt="" srcset=""></div>
+
         </div>
     </div>
   </div>
