modified shuffle section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <h2 class="section-heading-title">ماذا نقدم</h2>
             <p class="section-heading-desc">نحن  وكلاء معتمدون لاكبر الماركات في عالم الاجهزة الالكترونية</p>
         </div>
-        <ul class="shuffle" id="filter-btns">
+        <ul class="shuffle d-flex justify-content-center " id="filter-btns">
             <li class="active" data-target="all">All</li>
             <li data-target="Phone">IPhone</li>
             <li data-target="Huwaei">Huwaei</li>
