modified services content section

--- a/index.html
+++ b/index.html
@@ -85,18 +85,19 @@
             <li data-target="Samsung">Samsung</li>
             <li data-target="Oppo">Oppo</li>
           </ul>
-           <div class="services-content">
-            <div class="services-item" data-id="Phone"><img src="./img/services/i-phone-1.jpg" alt="" srcset=""></div>
-            <div class="services-item" data-id="Huwaei"><img src="./img/services/huawei-1.jpg" alt="" srcset=""></div>
-            <div class="services-item" data-id="Oppo"><img src="./img/services/oppo-1.jpg" alt="" srcset=""></div>
-            <div class="services-item" data-id="Samsung"><img src="./img/services/samsung-1.jpg" alt="" srcset=""></div>
-            <div class="services-item" data-id="Phone"><img src="./img/services/i-phone-2.jpg" alt="" srcset=""></div>
-            <div class="services-item" data-id="Huwaei"><img src="./img/services/huawei-2.jpg" alt="" srcset=""></div>
-            <div class="services-item" data-id="Oppo"><img src="./img/services/oppo-2.jpg" alt="" srcset=""></div>            <div class="services-item" data-id="Samsung"><img src="./img/services/samsung-2.jpg" alt="" srcset=""></div>
-            <div class="services-item" data-id="Phone"><img src="./img/services/i-phone-3.jpg" alt="" srcset=""></div>
-            <div class="services-item" data-id="Huwaei"><img src="./img/services/huawei-3.jpg" alt="" srcset=""></div>
-            <div class="services-item" data-id="Oppo"><img src="./img/services/oppo-3.jpg" alt="" srcset=""></div>
-            <div class="services-item" data-id="Samsung"><img src="./img/services/samsung-3.jpg" alt="" srcset=""></div>
+           <div class="services-content row">
+            <div class="services-item col-md-6 col-lg-4" data-id="Phone"><img class="img-fluid" src="./img/services/i-phone-1.jpg" alt="" srcset=""></div>
+            <div class="services-item col-md-6 col-lg-4" data-id="Huwaei"><img class="img-fluid" src="./img/services/huawei-1.jpg" alt="" srcset=""></div>
+            <div class="services-item col-md-6 col-lg-4" data-id="Oppo"><img class="img-fluid" src="./img/services/oppo-1.jpg" alt="" srcset=""></div>
+            <div class="services-item col-md-6 col-lg-4" data-id="Samsung"><img class="img-fluid" src="./img/services/samsung-1.jpg" alt="" srcset=""></div>
+            <div class="services-item col-md-6 col-lg-4" data-id="Phone"><img class="img-fluid" src="./img/services/i-phone-2.jpg" alt="" srcset=""></div>
+            <div class="services-item col-md-6 col-lg-4" data-id="Huwaei"><img class="img-fluid" src="./img/services/huawei-2.jpg" alt="" srcset=""></div>
+            <div class="services-item col-md-6 col-lg-4" data-id="Oppo"><img class="img-fluid" src="./img/services/oppo-2.jpg" alt="" srcset=""></div>            
+            <div class="services-item col-md-6 col-lg-4" data-id="Samsung"><img src="./img/services/samsung-2.jpg" alt="" srcset=""></div>
+            <div class="services-item col-md-6 col-lg-4" data-id="Phone"><img class="img-fluid" src="./img/services/i-phone-3.jpg" alt="" srcset=""></div>
+            <div class="services-item col-md-6 col-lg-4" data-id="Huwaei"><img class="img-fluid" src="./img/services/huawei-3.jpg" alt="" srcset=""></div>
+            <div class="services-item col-md-6 col-lg-4" data-id="Oppo"><img class="img-fluid" src="./img/services/oppo-3.jpg" alt="" srcset=""></div>
+            <div class="services-item col-md-6 col-lg-4" data-id="Samsung"><img class="img-fluid" src="./img/services/samsung-3.jpg" alt="" srcset=""></div>
           </div> 
     </div>
   </div>
