--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <h2 class="section-heading-title"> تواصل معنا</h2>
             <p class="section-heading-desc">يمكنك التواصل معنا عن طريق زيارة فروع شركة التؤآمانالمختلفة داخل محافظة اسوان</p>
         </div>
-        <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2888.155552900887!2d32.89634117413079!3d24.0942494754911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x143664b5356c32b5%3A0x79f9929dbe7fe2bc!2sSaad%20Zaghloul%2C%20Aswan%20Governorate!5e1!3m2!1sen!2seg!4v1682843692800!5m2!1sen!2seg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+        <div class="map"><iframe class="w-100" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2888.155552900887!2d32.89634117413079!3d24.0942494754911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x143664b5356c32b5%3A0x79f9929dbe7fe2bc!2sSaad%20Zaghloul%2C%20Aswan%20Governorate!5e1!3m2!1sen!2seg!4v1682843692800!5m2!1sen!2seg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
     </div>
   </div>
 <!-- ------------------------------------------------------------------------------- -->
