modified footer section

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <!-- ------------------------------------------------------------------------------- -->
 <!-- footer -->
 <footer>
-    <div class="footer-content">
+    <div class="footer-content text-center">
         <h2 class="footer-title">كل الحقوق محفوظة لشركة التؤآمان</h2>
     </div>
 </footer>
