--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
     </head>
     <body>
 <!-- ------------------------------------------------------------------------ -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light p-3">
+      <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb" class="navbar navbar-expand-lg navbar-light bg-light p-3">
         <div class="container">
-          <a class="navbar-brand fs-1 fw-bold" href="#">التؤآمان</a>
+          <a class="navbar-brand fs-1 fw-bold" href="index.html">التؤآمان</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link fw-bold active fs-5" aria-current="page" href="#">الرئيسية</a>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 breadcrumb">
+              <li class="nav-item breadcrumb-item">
+                <a class="nav-link fw-bold active fs-5" aria-current="page" href="#home">الرئيسية</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link fw-bold fs-5" href="#">من نحن</a>
+              <li class="nav-item breadcrumb-item">
+                <a class="nav-link fw-bold fs-5" href="#about">من نحن</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link fw-bold fs-5" href="#" tabindex="-1" aria-disabled="true">ماذا نقدم</a>
+              <li class="nav-item breadcrumb-item">
+                <a class="nav-link fw-bold fs-5" href="#services" >ماذا نقدم</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link fw-bold fs-5" href="#" tabindex="-1" aria-disabled="true">تواصل معنا</a>
+              <li class="nav-item breadcrumb-item">
+                <a class="nav-link fw-bold fs-5" href="#contact">تواصل معنا</a>
               </li>
             </ul>
 
@@ -44,7 +44,7 @@
       </nav>
 <!-- ----------------------------------------------------------------------------------- -->
    <!-- home -->
-   <div class="home">
+   <div class="home" id="home">
     <div class="home-content text-center position-absolute">
         <h2 class="home-title text-light mb-4">شركة التؤآمان</h2>
         <p class="home-desc mb-4 fs-3">مرحبا بكم في الموقع الرسمي لشركة التوامان لجميع خدمات الاجهزة الالكترونية</p>
